--- a/portfolio.html
+++ b/portfolio.html
@@ -4,42 +4,74 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Developer Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
-    
-    <link rel="stylesheet" href="Styles/portfolio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="Styles/portfolio.css" />
   </head>
   <body>
     <header class="header">
       <nav>
         <h3 class="nav-title">Ma<span class="primary-color">r</span>y</h3>
         <ul>
-         <li><a href="">Portfolio</a></li>
-         <li><a href="">Blog</a></li>
-         <li><button class="button-primary">Hire Me</button></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Blog</a></li>
+          <li><button class="button-primary">Hire Me</button></li>
         </ul>
       </nav>
-        <div class="banner">
-          <div>
-            <h3 class="banner-greeting">Hi,I am</h3>
-            <h1 class="banner-heading">Mary Hardy</h1>
-            <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <button class="button-primary">Download CV</button>
-            <button class="button-primary , contact-me">Contact Me</button>
-
-          </div>
-          <img class="hardy" src="images/hardy.png" alt="">
-        
+      <div class="banner">
+        <div class="banner-content">
+          <h3 class="banner-greeting">Hi,I am</h3>
+          <h1 class="banner-heading">Mary Hardy</h1>
+          <p class="banner-description">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="button-primary">Download CV</button>
+          <button class="button-primary , contact-me">Contact Me</button>
         </div>
+        <img class="hardy" src="images/hardy.png" alt="" />
+      </div>
     </header>
 
     <main>
-
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our moto.
+        </p>
+        <div class="about-info-container">
+          <div class="about-info">
+            <h4 class="info-name">Name:</h4>
+            <p class="info-description">Mary Hardy</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-name">Email:</h4>
+            <p class="info-description">info@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-name">Date of birth:</h4>
+            <p class="info-description">11 November 1987</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-name">From:</h4>
+            <p class="info-description">Los Angeles, USA</p>
+          </div>
+        </div>
+      </section>
+      <section class="what i do">
+        <h3 class="section-title">What I do</h3>
+      </section>
     </main>
 
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
 </html>
