--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
           experience? Check out my online resume and project portfolio.
         </p>
         <div class="skills-info-container">
-          <div>
+          <div class="skills">
             <img src="images/icons/js.png" alt="" class="skill-photo" />
             <h4 class="skill-name">Vanilla JavaScript</h4>
             <p class="skill-description">
@@ -85,7 +85,7 @@
               ligula eget dolor.
             </p>
           </div>
-          <div>
+          <div class="skills">
             <img src="images/icons/react.png" alt="" class="skill-photo" />
             <h4 class="skill-name">React</h4>
             <p class="skill-description">
@@ -94,7 +94,7 @@
               ligula eget dolor.
             </p>
           </div>
-          <div>
+          <div class="skills">
             <img src="images/icons/nodejs.png" alt="" class="skill-photo" />
             <h4 class="skill-name">Node.js</h4>
             <p class="skill-description">
@@ -103,7 +103,7 @@
               ligula eget dolor.
             </p>
           </div>
-          <div>
+          <div class="skills">
             <img src="images/icons/mongo.png" alt="" class="skill-photo" />
             <h4 class="skill-name">MongoDB</h4>
             <p class="skill-description">
@@ -114,8 +114,66 @@
           </div>
         </div>
       </section>
+      <section class="resume-Section">
+        <h3 class="section-title">A summary of My Resume</h3>
+
+        <div class="resume-column-container">
+          <div class="resume-column">
+          <h4 class="resume-column-title">My Education</h4>
+          <div class="resume-item">
+            <h3 class="resume-item-title">Master in Computer Engineering</h3>
+            <h5 class="resume-institution">Harvard University / 2015 - 2017</h5>
+            <p class="resume-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="resume-item">
+            <h3 class="resume-item-title">Master in Computer Engineering</h3>
+            <h5 class="resume-institution">Harvard University / 2015 - 2017</h5>
+            <p class="resume-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="resume-item">
+            <h3 class="resume-item-title">Master in Computer Engineering</h3>
+            <h5 class="resume-institution">Harvard University / 2015 - 2017</h5>
+            <p class="resume-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          
+        </div>
+
+        <div class="resume-column">
+          <h4 class="resume-column-title">My Experience</h4>
+
+          <div class="resume-item">
+            <h3 class="resume-item-title">Sr. Font End Developer</h3>
+            <h5 class="resume-institution">Apple Inc / 2020 - Current</h5>
+            <p class="resume-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="resume-item">
+            <h3 class="resume-item-title">Jr. Font End Developer</h3>
+            <h5 class="resume-institution">Dribbble Inc / 2018 - 2022</h5>
+            <p class="resume-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="resume-item">
+            <h3 class="resume-item-title">HTML Developer</h3>
+            <h5 class="resume-institution">Adobe Inc / 2017 - 2018</h5>
+            <p class="resume-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+        </div>
+      </div>
+      </section>
+      <button id="cv-button" class="button-primary">Download CV</button>
     </main>
 
-    <footer></footer>
+    <footer>
+      
+    </footer>
   </body>
 </html>
